x1262: support thickness (formerly int) to one decimal place